welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:21: error: ')' expected but ';' found.
def position(i:Int; k;Int; ligne:Boolean){
                  ^FlowerPot:21: error: ';' expected but ')' found.
def position(i:Int; k;Int; ligne:Boolean){
                                        ^